# gowers_stabilizer_testing

./: .gitignore  README.md  gowers_boolean.py  iteration_results_20260129_114041.json  iteration_results_20260129_172426.json  iteration_results_20260129_224030.json  iteration_results_20260130_105538.json  iteration_results_20260130_110709.json  pyproject.toml  quantum_gowers.py  viz.py
src/gowers_stabilizer_testing/: Gowers.py  QuantumStates.py  main.py  simple_stabilizer.py  stabilizer_circuit.py
