[tool.poetry]
name = "gowers-stabilizer-testing"
version = "0.1.0"
description = "Implementing the algorithm presented in Polynomial-time tolerant testing stabilizer states by Arunachalam et al"
authors = ["atg205 <hanup@mailbox.org>"]

readme = "README.md"
packages = [{include = "gowers_stabilizer_testing", from = "src"}]

[tool.dependencies]
python = ">=3.10"

dependencies = [
    "sympy (>=1.14.0,<2.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "qutip (>=5.2.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
